tests/baselines/reference/propertyAccess4.errors.txt
tests/cases/compiler/propertyAccess4.ts(1,6): error TS2339: Property 'toBAZ' does not exist on type 'null'.


==== tests/cases/compiler/propertyAccess4.ts (1 errors) ====
    null.toBAZ();
         ~~~~~
!!! error TS2339: Property 'toBAZ' does not exist on type 'null'.